Action button alignment fixed

--- a/style/cluster.css
+++ b/style/cluster.css
@@ -340,3 +340,7 @@
 .error-view-message {
   margin-left: 30px;
 }
+
+.actions-icon-btn {
+  display: flex;
+}
